# G213Colors

./: .gitignore  Cargo.toml  G213Colors.desktop  G213Colors.py  INSTALL.sh  QWEN.md  README.md  TODO.md  be.jeroened.pkexec.g213colors.policy  build.rs  config_manager.py  default.conf  g213colors.service  main.py  makefile
docs/: adding-devices.md
src/: app.rs  cli.rs  command.rs  config.rs  device.rs  error.rs  main.rs  product.rs
