[package]
name = "g213colors"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Rust/Iced Logitech G213 lighting controller"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hex = "0.4"
iced = "0.14.0"
rusb = "0.9.4"
thiserror = "2.0"

[profile.release]
lto = true
strip = true
